--- a/deployments/kubernetes/charts/clowder2/values.yaml
+++ b/deployments/kubernetes/charts/clowder2/values.yaml
@@ -186,16 +186,22 @@ extractors:
 #    #     value: "bar"
   wordcount:
     image: clowder/extractors-wordcount:latest
+    replicaCount: 0
   image-preview:
     image: clowder/extractors-image-preview:latest
+    replicaCount: 0
   image-metadata:
     image: clowder/extractors-image-metadata:latest
+    replicaCount: 0
   audio-preview:
     image: clowder/extractors-audio-preview:latest
+    replicaCount: 0
   file-digest:
-    image: clowder/extractors-digest:latest
+    image: i3registry.icecube.aq/extractors-digest-local:0.1
+    imagePullSecrets: regcred-aq
   geotiff-preview:
     image: clowder/extractors-geotiff-preview:latest
+    replicaCount: 0
 
 # ----------------------------------------------------------------------
 # ELASTICSEARCH
@@ -219,6 +225,10 @@ keycloak:
   hostname: keycloak.icecube.wisc.edu
   realm: IceCube
   clientid: clowder2-backend
+  callback_url: https://clowder2.icecube.aq/api/v2/auth
+  auth_url: https://keycloak.icecube.wisc.edu/auth/realms/IceCube/protocol/openid-connect/auth
+  token_url: https://keycloak.icecube.wisc.edu/auth/realms/IceCube/protocol/openid-connect/userinfo
+  userinfo_url: https://keycloak.icecube.wisc.edu/auth/realms/IceCube/protocol/openid-connect/userino
 
 # ----------------------------------------------------------------------
 # OTHERS
