--- a/deployments/kubernetes/charts/clowder2/templates/backend/deployment.yaml
+++ b/deployments/kubernetes/charts/clowder2/templates/backend/deployment.yaml
@@ -77,7 +77,7 @@ spec:
             - name: auth_client_id
               value: {{ .Values.keycloak.clientid }}
             - name: auth_redirect_uri
-              value: {{ .Values.keycloak.callback_url}}
+              value: {{ .Values.keycloak.redirect_uri}}
             - name: auth_url
               value: {{ .Values.keycloak.auth_url }}?client_id={{ .Values.keycloak.clientid }}&redirect_uri=$(auth_redirect_uri)&response_type=code&scope=openid%20email
             - name: oauth2_scheme_auth_url
@@ -87,7 +87,7 @@ spec:
             - name: auth_token_url
               value: {{ .Values.keycloak.token_url }}
             - name: auth_server_url
-              value: https://{{ .Values.keycloak.hostname }}/auth/
+              value: https://{{ .Values.keycloak.hostname }}
             - name: keycloak_base
               value: https://{{ .Values.hostname }}/api
             - name: frontend_url
