increase elasticsearch mem config

--- a/deployments/kubernetes/charts/clowder2/values.yaml
+++ b/deployments/kubernetes/charts/clowder2/values.yaml
@@ -214,6 +214,16 @@ extractors:
 elasticsearch:
   clusterName: clowder2
 
+  esJvmOptions: "-XX:MaxDirectMemorySize=2g"
+
+  resources:
+    requests:
+      cpu: "1000m"
+      memory: "2Gi"
+    limits:
+      cpu: "1000m"
+      memory: "2Gi"
+
   master:
     persistence:
       storageClass: csi-cephfs-sc
