fix es chart values v4

--- a/deployments/kubernetes/charts/clowder2/values.yaml
+++ b/deployments/kubernetes/charts/clowder2/values.yaml
@@ -214,7 +214,7 @@ extractors:
 elasticsearch:
   clusterName: clowder2
   
-  extraEnvVars: [es-additional-env]
+  extraEnvVarsCM: [es-additional-env]
 
   master:
     persistence:
