--- a/deployments/kubernetes/charts/clowder2/values.yaml
+++ b/deployments/kubernetes/charts/clowder2/values.yaml
@@ -214,7 +214,9 @@ extractors:
 elasticsearch:
   clusterName: clowder2
   
-  extraEnvVarsCM: [es-additional-env]
+  extraEnvVars: 
+    - name: ES_JAVA_OPTS
+      value: "$ES_JAVA_OPTS -XX:MaxDirectMemorySize=2g"
 
   master:
     persistence:
