update ingress config for other services

--- a/deployments/kubernetes/charts/clowder2/ingress-values.yaml
+++ b/deployments/kubernetes/charts/clowder2/ingress-values.yaml
@@ -13,4 +13,4 @@ ingress-nginx:
     service:
       externalTrafficPolicy: Local
       annotations:
-        external-dns.alpha.kubernetes.io/hostname: clowder2-test.icecube.aq
+        external-dns.alpha.kubernetes.io/hostname: clowder2-test.icecube.aq,clowder2-minio.icecube.aq
