--- a/deployments/kubernetes/charts/clowder2/templates/backend/deployment.yaml
+++ b/deployments/kubernetes/charts/clowder2/templates/backend/deployment.yaml
@@ -87,7 +87,7 @@ spec:
             - name: auth_token_url
               value: {{ .Values.keycloak.token_url }}
             - name: auth_server_url
-              value: https://{{ .Values.keycloak.hostname }}
+              value: https://{{ .Values.keycloak.hostname }}/
             - name: keycloak_base
               value: https://{{ .Values.hostname }}/api
             - name: frontend_url
