--- a/deployments/kubernetes/charts/clowder2/values.yaml
+++ b/deployments/kubernetes/charts/clowder2/values.yaml
@@ -223,7 +223,7 @@ elasticsearch:
   clusterName: clowder2
 
   master:
-    heapSize: 512Mi
+    heapSize: 512m
     resource:
       requests:
         memory: 1Gi
@@ -234,7 +234,7 @@ elasticsearch:
       #!/bin/sh
       echo "-XX:MaxDirectMemorySize=2g" > /opt/bitnami/elasticsearch/config/jvm.options.d/directmemory.options
   data:
-    heapSize: 512Mi
+    heapSize: 512m
     resource:
       requests:
         memory: 1Gi
@@ -245,7 +245,7 @@ elasticsearch:
       #!/bin/sh
       echo "-XX:MaxDirectMemorySize=2g" > /opt/bitnami/elasticsearch/config/jvm.options.d/directmemory.options
   coordinating:
-    heapSize: 256Mi
+    heapSize: 256m
     resource:
       requests:
         memory: 512Mi
@@ -253,7 +253,7 @@ elasticsearch:
       #!/bin/sh
       echo "-XX:MaxDirectMemorySize=1g" > /opt/bitnami/elasticsearch/config/jvm.options.d/directmemory.options
   ingest:
-    heapSize: 256Mi
+    heapSize: 256m
     resource:
       requests:
         memory: 512Mi
